--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,12 @@
+/*---------------------BASIC CSS RESET--------------------*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+/*=========================================================*/
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +14,44 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background:  #f1f5f8;
+  color: #222;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.booklist {
+  width: 90vw;
+  max-width: 1170px;
+  margin: 5rem auto;
+  display: grid;
+  gap: 2rem;
+}
+
+.book {
+  background: #fff;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
+}
+
+.booklist h1{
+  margin-top: 0.5rem;
+}
+.book h1 {
+  margin-top: 0.5rem;
+}
+
+.book h4 {
+  color: #f17d98;
+ font-size: 0.75rem;
+ margin-top:0.25rem;
+}
+
+@media screen and (min-width:768px){
+  .booklist{
+    grid-template-columns: repeat(3,1fr);
+  }
 }
